deskly-infrastructure/kubernetes/k8s-deskly-core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deskly-core
  namespace: deskly
spec:
  selector:
    matchLabels:
      app: deskly-core
  template:
    metadata:
      labels:
        app: deskly-core
    spec:
      containers:
        - name: deskly-core
          image: kamilbonkowski/deskly-core:2.21-prod
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: 720Mi
              cpu: 500m
            limits:
              memory: 720Mi
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: deskly-core
  namespace: deskly
spec:
  ports:
  - port: 80
    targetPort: 8081
  selector:
    app: deskly-core
  type: ClusterIP
