deskly-infrastructure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deskly-ingress
  namespace: deskly
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /api/v1/deskly-location/health
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api/v1/deskly-location
        backend:
          service:
            name: deskly-location
            port:
              number: 80
      - pathType: Prefix
        path: /api/v1/deskly-core
        backend:
          service:
            name: deskly-core
            port:
              number: 80
